--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 Snake Lemma.
-Five Lemma (work in progress...)
+Five and Four Lemmas (work in progress...)
 
 Compiled with Coq version 8.7.2
 Author : Daniel de Rauglaudre
